<resources>
    <string name="app_name">Geopost</string>
    <string name="title_activity_main">Geopost</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="add_geopost_title">Geopost</string>
    <string name="add_geopost_message_hint">Text goes here...</string>
    <string name="add_geopost_title_hint">Title goes here...</string>
    <string name="show_geopost_title">Geopost:</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="answer_geopost_title">Answer this geopost:</string>
    <string name="not_online">No internet connection</string>
    <string name="sharePrefUsername">username</string>
    <string name="sharePrefUserId">userid</string>
    <string name="set_username_title">Enter username</string>
    <string name="set_username_hint">Enter here...</string>
    <string name="submit">Submit</string>
    <string name="wsUrl">http://geopostws.azurewebsites.net/ws/Service.svc</string>
    <string name="noGPS">No location information available</string>
    <string name="notification_title">Geopost</string>
    <string name="notification_conversations_found_text">Found new geoposts close to you!</string>
    <string name="notification_comment_found_text">There are comments to your geoposts!</string>
    <string name="notifications_comment_and_converations_found_text">Found geoposts close to you and there are comments to your geposts!</string>
    <string name="notifications_list_conversation_found">This geopost was found close to you! </string>
    <string name="notifications_list_comment">Someone commented to your geopost! </string>
    <string name="show_notifications_title">Activity</string>
    <string name="clear">clear</string>
    <string name="sharedPrefNotifiedConversationIds">NotifiedConversationIds</string>
    <string name="pick_account">Please pick a login account</string>
    <string name="UsernameExists">Username already exists!</string>
    <string name="postFailed">Failed to post. Check internet connection</string>
    <string name="loadFailed">Failed to load. Check internet connection</string>
    <string name="getUsernameFailed">Failed to get username. Check internet connection</string>
    <string name="saved">Saved</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-4905755038708706/1788352674</string>--><!--prod-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string><!--test-->
    <string name="notifications">Notifications</string>
    <string name="instruction_marker_title">Long press the map to post a message!</string>
    <string name="thanks">Thanks!</string>

    <string-array name="nav_drawer_items">
        <item >Change username: </item>
        <item >Go to my location</item>
        <item >Post to my location</item>
        <item>Help me!</item>
        <item >Log out</item>
    </string-array>

    <string name="said">said</string>
    <string name="help_text"><![CDATA[ <b>How to:</b><br/><br/>
&#8226; <b>Add a post to the map:</b> Hold your finger (long tap) on the map where you want to post a message. A box will appear where you can type your message.<br/><br/>
&#8226; <b>See the content of a message:</b> When you see a message on the map, tap on it. The message text will show.<br/><br/>
&#8226; <b>Answer to a message:</b> when you see a massage on the map, tap on it. The content will be shown and there you can tap <i>Comment</i> to post an answer.<br/><br/>
&#8226; <b>Load more messages:</b> The app reacts to your actions on the map. When you zoom in, or when you move to another location on the map, all messages within 500m from the new middle point of the map are loaded.<br/><br/>]]></string>
    <string name="title_activity_splash_screen">Geopost</string>

    <string name="hello_world">Hello world!</string>
</resources>
